# RagInABox

./: .env.example  .gitignore  AGENT.md  README.md  cli.py  cli_step1.py  main.py  pyproject.toml
rag_in_a_box/: cli.py  smoke_step3.py  smoke_step4_azure.py
rag_in_a_box/adapters/chunking/: docling_chunker.py  simple_chunker.py
rag_in_a_box/adapters/chunking/docling/: native_chunker.py
rag_in_a_box/adapters/embeddings/: azure_openai.py  dummy_embedder.py
rag_in_a_box/adapters/extractors/: docling_extractor.py  html_extractor.py  pdf_extractor.py  registry.py  text_extractor.py
rag_in_a_box/adapters/llm/: azure_openai.py  dummy_llm.py
rag_in_a_box/adapters/sources/: local_folder.py  website_crawler.py
rag_in_a_box/adapters/vectorstores/: azure_ai_search.py  in_memory.py
rag_in_a_box/app/: gradio_app.py  gradio_client.py
rag_in_a_box/config/: settings.py
rag_in_a_box/core/: interfaces.py  models.py  token_utils.py
rag_in_a_box/pipelines/: chat.py  ingestion.py
tests/: test_docling_adapters.py
